# napari-psf-analysis

./: .buildinfo  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  environment.yaml  genindex.html  index.html  license.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.html  tox.ini
.doctrees/: environment.pickle  index.doctree  license.doctree  setup.doctree
.github/workflows/: documentation.yaml  test_and_deploy.yml
_sources/: index.md.txt
docs/source/: conf.py  license.md  setup.md
scratchpad/: PSF Fitting.ipynb  PSF Fitting_laurent.ipynb  fit_psfs.py  psf_fit_utils.py
src/napari_psf_analysis/: __init__.py  _dock_widget.py  napari.yaml
src/napari_psf_analysis/_tests/: test_dock_widget.py
src/napari_psf_analysis/_tests/psf_analysis/: test_analyzer.py  test_fit_1d.py  test_fit_2d.py  test_fit_3d.py  test_psf.py  test_psf_analysis.py  test_utils.py
src/napari_psf_analysis/_tests/psf_analysis/extract/: test_BeadExtractor.py
src/napari_psf_analysis/_tests/psf_analysis/fit/: test_fit_1d.py  test_fit_2d.py  test_fit_3d.py  test_fitter.py
src/napari_psf_analysis/_tests/utils/: test_gaussians.py
src/napari_psf_analysis/psf_analysis/: PSFAnalysis.py  analyzer.py  fit_3d.py  image.py  parameters.py  psf.py  psf_analysis.py  records.py  sample.py  utils.py
src/napari_psf_analysis/psf_analysis/extract/: BeadExtractor.py
src/napari_psf_analysis/psf_analysis/fit/: estimator.py  fit_1d.py  fit_2d.py  fitter.py
src/napari_psf_analysis/utils/: gaussians.py  plot_utils.py  psf_lut.py
src/napari_psf_measures/: __init__.py
src/napari_psf_measures/_tests/: test_dock_widget.py  test_function.py
