[metadata]
name = napari_psf_analysis
description = A plugin to analyse point spread functions (PSFs).
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fmi-faim/napari-psf-analysis.git
author = Tim-Oliver Buchholz
author_email = tim-oliver.buchholz@fmi.ch
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Testing
project_urls =
    Bug Tracker = https://github.com/fmi-faim/napari-psf-analysis/issues
    Documentation = https://github.com/fmi-faim/napari-psf-analysis#README.md
    Source Code = https://github.com/fmi-faim/napari-psf-analysis
    User Support = https://github.com/fmi-faim/napari-psf-analysis/issues

[options]
packages = find:
install_requires =
    matplotlib
    napari
    napari-plugin-engine>=0.1.4
    numpy
    pandas
    scikit-image
python_requires = >=3.7
package_dir =
    =src
setup_requires =
    setuptools-scm

[options.packages.find]
where = src

[options.entry_points]
napari.plugin =
    napari-psf-measures = napari_psf_analysis
