[metadata]
name = napari_psf_analysis
description = A plugin to analyse point spread functions (PSFs).
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fmi-faim/napari-psf-analysis.git
author = Tim-Oliver Buchholz
author_email = tim-oliver.buchholz@fmi.ch
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Testing
project_urls =
    Bug Tracker = https://github.com/fmi-faim/napari-psf-analysis/issues
    Documentation = https://github.com/fmi-faim/napari-psf-analysis#README.md
    Source Code = https://github.com/fmi-faim/napari-psf-analysis
    User Support = https://github.com/fmi-faim/napari-psf-analysis/issues

[options]
packages = find:
install_requires =
    bfio
    matplotlib
    matplotlib-scalebar
    napari
    numpy
    pandas
    scikit-image
python_requires = >=3.8
package_dir =
    =src
setup_requires =
    setuptools-scm

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari_psf_analysis = napari_psf_analysis:napari.yaml

[options.extras_require]
testing =
    napari
    pyqt5
    pytest
    pytest-cov
    tox

[options.package_data]
napari_psf_analysis = napari.yaml

[pydocstyle]
ignore = D100, D213, D413
